[gd_scene load_steps=37 format=3 uid="uid://cf45nibvs3wlp"]

[ext_resource type="Script" path="res://CharacterBody3D.gd" id="1_b2bvj"]
[ext_resource type="Script" path="res://map.gd" id="1_b8bku"]
[ext_resource type="PackedScene" uid="uid://b0npl8eeou6xp" path="res://model/flashlight.glb" id="2_0ipj2"]
[ext_resource type="Script" path="res://interact.gd" id="3_j8736"]
[ext_resource type="AudioStream" uid="uid://d4ajp8kb40agj" path="res://sound/On.mp3" id="4_rxd0j"]
[ext_resource type="AudioStream" uid="uid://dy5kwv7gnj6x6" path="res://sound/Keypickup.mp3" id="6_btmwi"]
[ext_resource type="AudioStream" uid="uid://b0uaumd36qmr" path="res://sound/Walking1.mp3" id="7_ob0tg"]
[ext_resource type="PackedScene" uid="uid://e67tgv8ub1jq" path="res://model/table.glb" id="8_v4uxy"]
[ext_resource type="PackedScene" uid="uid://bggqcn77kv3c1" path="res://model/bed.glb" id="9_43w5x"]
[ext_resource type="AudioStream" uid="uid://c63e6s0tdcfpl" path="res://sound/Knock.mp3" id="11_pqcst"]
[ext_resource type="PackedScene" uid="uid://beqps7gk24b1a" path="res://model/ghost.fbx" id="12_wmih6"]
[ext_resource type="PackedScene" uid="uid://c4dr2o4ffma4j" path="res://model/keyboard.blend" id="13_66dyw"]
[ext_resource type="PackedScene" uid="uid://c0nbafhqydol7" path="res://model/house.blend" id="14_im7nk"]
[ext_resource type="PackedScene" uid="uid://be8xtnflhcf02" path="res://model/mouse.blend" id="14_pqhhp"]
[ext_resource type="PackedScene" uid="uid://cggsj77rkgt4p" path="res://model/pc.blend" id="15_vxcmw"]
[ext_resource type="PackedScene" uid="uid://di3vt7bhpk8nr" path="res://model/pizza.blend" id="16_8wuxi"]
[ext_resource type="PackedScene" uid="uid://44jrx5voll8n" path="res://model/bush.blend" id="17_8edon"]
[ext_resource type="PackedScene" uid="uid://cru2hrh8ivetj" path="res://model/wall.blend" id="18_4fwwr"]
[ext_resource type="Script" path="res://Label.gd" id="19_rfyox"]
[ext_resource type="AudioStream" uid="uid://378hgull2rxd" path="res://sound/scream.mp3" id="20_jpf3t"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k3tp4"]
disable_ambient_light = true
metallic = 1.0
metallic_specular = 0.45

[sub_resource type="BoxShape3D" id="BoxShape3D_5akpv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h13oy"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_byd04"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mmdsy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_agffp"]
size = Vector3(0.597656, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_pjptv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_be3sv"]
size = Vector3(1.67975, 1, 4.24146)

[sub_resource type="BoxShape3D" id="BoxShape3D_lfi1g"]
size = Vector3(3.70068, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6h4h2"]

[sub_resource type="SphereMesh" id="SphereMesh_iuxta"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6sieh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8qk10"]

[sub_resource type="BoxShape3D" id="BoxShape3D_68ndr"]
size = Vector3(1.42578, 1, 1.94263)

[sub_resource type="BoxShape3D" id="BoxShape3D_pdytb"]
size = Vector3(1.19043, 7.21729, 16.6748)

[sub_resource type="BoxShape3D" id="BoxShape3D_v5mat"]

[node name="map" type="Node3D"]
script = ExtResource("1_b8bku")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(6.63563, 0, 0, 0, -0.030294, 0, 0, 0, 6.5515, 0, 0, -7.36973)
material_overlay = SubResource("StandardMaterial3D_k3tp4")
size = Vector3(1, 1, 0.719146)

[node name="StaticBody3D" type="StaticBody3D" parent="CSGBox3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D/StaticBody3D"]
transform = Transform3D(1.00395, 0, 0, 0, 1.00395, 0, 0, 0, 7.55419, 0, 0, 0)
shape = SubResource("BoxShape3D_5akpv")

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(0.235519, 0, 0, 0, 0.235519, 0, 0, 0, 0.235519, -0.240646, 0.318089, -7.19492)
script = ExtResource("1_b2bvj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_h13oy")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("ConvexPolygonShape3D_byd04")

[node name="Neck" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 2.03213, 0, 0, 0, 1, 0.000552773, 0.720812, 0.0058496)

[node name="Camera3D" type="Camera3D" parent="Player/Neck"]

[node name="flashlight" parent="Player/Neck" instance=ExtResource("2_0ipj2")]
transform = Transform3D(-0.14656, 0, 0.00346736, 0, 0.0721648, 0, -0.00705003, 0, -0.0720814, 0.453801, -0.190533, -0.497406)

[node name="SpotLight3D" type="SpotLight3D" parent="Player/Neck/flashlight"]
transform = Transform3D(-28.9038, 0, -1.39037, 0, 28.9532, 0, 2.82697, 0, -58.7688, 1.80164, 0.128006, 1.43213)

[node name="hand" type="Marker3D" parent="Player/Neck"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0.649929, 0.726911, -2.32387)

[node name="interact" type="RayCast3D" parent="Player/Neck"]
transform = Transform3D(-1.47653, 0.312154, -0.031267, 0.259311, 1.77093, 0.0236893, 0.0523308, 0.0322051, -0.999593, 0, -0.0220728, 0)
target_position = Vector3(0, 0, 2)
collide_with_areas = true
script = ExtResource("3_j8736")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.447712, 0.894178, 0, -0.894178, -0.447712, 0, 10.7112, -5.79518)
light_energy = 0.0

[node name="flashlight_ON" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rxd0j")
volume_db = 2.667
pitch_scale = 2.0

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(0.0893601, 0, 0, 0, 0.0893602, 0, 0, 0, 0.0231877, -0.535266, 0.353938, -7.25838)
size = Vector3(1, 1, 0.525391)

[node name="Area3D" type="Area3D" parent="CSGBox3D2" groups=["box"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D2/Area3D"]
transform = Transform3D(1.1199, 0, 0, 0, 1.1199, 0, 0, 0, 1.1199, 0, 0, 0)
shape = SubResource("CylinderShape3D_mmdsy")

[node name="key_pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_btmwi")
volume_db = 3.991
pitch_scale = 1.36

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node3D" type="Node3D" parent="."]

[node name="walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ob0tg")
volume_db = -24.0
pitch_scale = 1.68

[node name="Timer_walk" type="Timer" parent="."]
one_shot = true

[node name="table" parent="." instance=ExtResource("8_v4uxy")]
transform = Transform3D(0.129929, 0, 0, 0, 0.129929, 0, 0, 0, 0.129929, -0.933465, -0.0801603, -7.13138)

[node name="StaticBody3D" type="StaticBody3D" parent="table"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="table/StaticBody3D"]
transform = Transform3D(7.93186, 0, 0, 0, 1.77179, 0, 0, 0, 3.05941, 1.58143, 1.77875, 0)
shape = SubResource("BoxShape3D_agffp")

[node name="bed" parent="." instance=ExtResource("9_43w5x")]
transform = Transform3D(-0.0815404, 0, 0.00618972, 0, 0.081775, 0, -0.00618972, 0, -0.0815404, 0.318813, -0.00697247, -7.38889)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0179061, 0.99984, 0, -0.99984, 0.0179061, 0.262336, 3.6692, -2.71908)
light_energy = 1.3
light_indirect_energy = 3.162
light_volumetric_fog_energy = 0.895
light_size = 0.257
light_specular = 0.1
spot_range = 4.23798

[node name="Timer_knock" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="knock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_pqcst")
volume_db = 1.0
pitch_scale = 1.1

[node name="Root Scene" parent="." groups=["ghost"] instance=ExtResource("12_wmih6")]
transform = Transform3D(-0.0163394, 0.000333964, 0.137895, -0.000149606, 0.13886, -0.000354026, -0.137896, -0.000190223, -0.0163389, -0.277441, -0.107878, -7.85457)
visible = false

[node name="Area3D" type="Area3D" parent="Root Scene" groups=["ghost"]]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, -5.82077e-11, -5.96046e-08, 1.74623e-10, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Root Scene/Area3D"]
transform = Transform3D(3.32631, 2.32831e-08, -1.19209e-07, 2.6077e-08, 7.69803, -2.09548e-09, -1.78814e-06, 3.49246e-08, 2.17343, -0.00377655, 3.50622, -0.0089426)
shape = SubResource("BoxShape3D_pjptv")

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(0.313486, 0.838328, 0.446019, 0.00145306, -0.470118, 0.882603, 0.949592, -0.276035, -0.148593, -1.42187, 0.65923, -7.28159)
light_color = Color(1, 0.109804, 0.054902, 1)
light_energy = 0.567
light_indirect_energy = 1.216
light_volumetric_fog_energy = 2.514
light_size = 0.324
spot_range = 5.15356

[node name="house" parent="." instance=ExtResource("14_im7nk")]
transform = Transform3D(0.192525, 0, 0, 0, 0.192525, 0, 0, 0, 0.192525, -1.22628, -0.0153288, -7.37155)

[node name="StaticBody3D" type="StaticBody3D" parent="house"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="house/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 3.31233, 0, 1.70351, -0.290318)
shape = SubResource("BoxShape3D_be3sv")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="house/StaticBody3D"]
transform = Transform3D(1.6198, 0, 0, 0, 1, 0, 0, 0, 3.31233, 11.352, 1.70351, -0.290318)
shape = SubResource("BoxShape3D_be3sv")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="house/StaticBody3D"]
transform = Transform3D(0.020019, 0, -3.34207, 0, 1, 0, 1.82344, 0, 0.0366916, 6.81351, 1.70351, 2.67538)
shape = SubResource("BoxShape3D_be3sv")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="house/StaticBody3D"]
transform = Transform3D(0.087573, 0, -3.2996, 0, 1.61392, 0, 0.996158, 0, 0.29007, -3.97756, 1.70351, -3.8111)
shape = SubResource("BoxShape3D_be3sv")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="house/StaticBody3D"]
transform = Transform3D(0.00750616, 0, -1.15936, 0, 1, 0, 1.00483, 0, 0.00866057, 11.0509, 1.70351, -4.27988)
shape = SubResource("BoxShape3D_be3sv")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="house/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 3.31233, 0, 1.70351, -1.78492)
shape = SubResource("BoxShape3D_be3sv")

[node name="StaticBody3D2" type="StaticBody3D" parent="house"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="house/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 3.77788, 0, 0, 0, 1, 4.70906, 0, -3.90058)
shape = SubResource("BoxShape3D_lfi1g")

[node name="keyboard" parent="." instance=ExtResource("13_66dyw")]
transform = Transform3D(0.00217377, -0.000557726, -0.0424233, 0.000672214, 0.0424741, -0.000523949, 0.0424217, -0.000644466, 0.00218216, -0.685853, 0.26374, -7.23191)

[node name="mouse" parent="." instance=ExtResource("14_pqhhp")]
transform = Transform3D(0.00021109, 0, 0.0115393, 0, 0.0111714, 0, -0.0115393, 0, 0.00021109, -0.889734, 0.272307, -7.28182)

[node name="pc" parent="." instance=ExtResource("15_vxcmw")]
transform = Transform3D(0.0362157, 0, 0.404037, 0, 0.405657, 0, -0.404037, 0, 0.0362157, -0.738419, 0.279018, -7.14204)

[node name="door_pivot" type="Node3D" parent="."]
transform = Transform3D(0.999958, -0.00916285, 0, 0.00916285, 0.999958, 0, 0, 0, 1, 0.432836, 0.359444, -8.13107)

[node name="door" type="MeshInstance3D" parent="door_pivot"]
transform = Transform3D(0.37122, 0, 0.00108311, 0, 0.682818, 0, -0.00290265, 0, 0.138519, -0.197248, -0.0105756, 0.0354691)
mesh = SubResource("BoxMesh_6h4h2")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="door_pivot/door"]
transform = Transform3D(0.18045, 0, 0, 0, 0.0937091, 0, 0, 0, 1.41335, -0.389347, 0, -0.0105057)
mesh = SubResource("SphereMesh_iuxta")

[node name="interact_door" type="Area3D" parent="door_pivot/door/MeshInstance3D" groups=["door"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_pivot/door/MeshInstance3D/interact_door"]
shape = SubResource("BoxShape3D_6sieh")

[node name="StaticBody3D" type="StaticBody3D" parent="door_pivot/door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_pivot/door/StaticBody3D"]
shape = SubResource("BoxShape3D_8qk10")

[node name="pizza" parent="." instance=ExtResource("16_8wuxi")]
transform = Transform3D(0.0376189, 0, 0, 0, 0.0376189, 0, 0, 0, 0.0376189, 0.0450342, 0.0401261, -9.23081)

[node name="area_pizza" type="Area3D" parent="pizza" groups=["pizza"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="pizza/area_pizza"]
transform = Transform3D(1.72455, 0, 0, 0, 0.662002, 0, 0, 0, 1, -0.0897738, 0, 0.0369873)
shape = SubResource("BoxShape3D_68ndr")

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.113377, 0.993552, 0, -0.993552, 0.113377, 0, 0.791133, -9.19183)
light_energy = 2.78

[node name="bush" parent="." instance=ExtResource("17_8edon")]
transform = Transform3D(0.00499935, 0, 0.0886978, 0, 0.0888385, 0, -0.0886978, 0, 0.00499935, 0.751874, 0.0152069, -9.27141)

[node name="StaticBody3D" type="StaticBody3D" parent="bush"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bush/StaticBody3D"]
transform = Transform3D(16.7237, 0, 0.0246107, 0, 1.00002, 0, -2.08573, 0, 0.197333, -1.45097, 4.37466, -1.54743)
shape = SubResource("BoxShape3D_pdytb")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="bush/StaticBody3D"]
transform = Transform3D(16.7237, 0, 0.0246107, 0, 1.00002, 0, -2.08573, 0, 0.197333, -2.19535, 4.37467, -14.7542)
shape = SubResource("BoxShape3D_pdytb")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="bush/StaticBody3D"]
transform = Transform3D(-0.313356, 0, 0.191552, 0, 1.00002, 0, -7.90837, 0, -0.00758988, 3.58781, 4.37467, -8.54171)
shape = SubResource("BoxShape3D_pdytb")

[node name="bush2" parent="." instance=ExtResource("17_8edon")]
transform = Transform3D(0.00499935, 0, 0.0886978, 0, 0.0888385, 0, -0.0886978, 0, 0.00499935, 0.751874, 0.0152069, -9.47369)

[node name="bush3" parent="." instance=ExtResource("17_8edon")]
transform = Transform3D(0.00499935, 0, 0.0886978, 0, 0.0888385, 0, -0.0886978, 0, 0.00499935, -0.635055, 0.0152069, -9.27127)

[node name="bush4" parent="." instance=ExtResource("17_8edon")]
transform = Transform3D(0.00499935, 0, 0.0886978, 0, 0.0888385, 0, -0.0886978, 0, 0.00499935, -0.575655, 0.0152069, -10.4322)

[node name="wall" parent="." instance=ExtResource("18_4fwwr")]
transform = Transform3D(0.0814034, 0, 0, 0, 0.0814034, 0, 0, 0, 0.0814034, 0.0416749, 0.0152068, -9.68479)

[node name="wall2" parent="." instance=ExtResource("18_4fwwr")]
transform = Transform3D(0.00424873, 0, -0.0821779, 0, 0.0814034, 0, 0.101541, 0, 0.00343853, -0.476361, 0.0152068, -9.03672)

[node name="wall3" parent="." instance=ExtResource("18_4fwwr")]
transform = Transform3D(0.00424873, 0, -0.0821779, 0, 0.0814034, 0, 0.101541, 0, 0.00343853, 0.558278, 0.0152068, -9.03672)

[node name="Label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 68.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Pizza 0/1"
script = ExtResource("19_rfyox")
metadata/_edit_use_anchors_ = true

[node name="scream" type="Area3D" parent="." groups=["scream"]]
transform = Transform3D(0.316983, 0, 0, 0, 0.316983, 0, 0, 0, 0.559797, 0.119523, 0, -7.84558)

[node name="CollisionShape3D" type="CollisionShape3D" parent="scream"]
shape = SubResource("BoxShape3D_v5mat")

[node name="scream" type="AudioStreamPlayer" parent="scream"]
stream = ExtResource("20_jpf3t")

[node name="can_open_door" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer_knock" to="." method="_on_timer_knock_timeout"]
[connection signal="body_entered" from="scream" to="." method="_on_scream_body_entered"]
[connection signal="timeout" from="can_open_door" to="." method="_on_can_open_door_timeout"]
